--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -30,7 +30,7 @@
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:theme="@style/AppTheme.Toolbar"/>
@@ -39,7 +39,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.NestedScrollView
+    <android.support.v4.widget.NestedScrollView
         android:id="@+id/scrolling_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -110,7 +110,7 @@
         </LinearLayout>
 
 
-    </android.support.v7.widget.NestedScrollView>
+    </android.support.v4.widget.NestedScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/favorite"
