--- a/app/src/main/res/layout/movie_grid_item.xml
+++ b/app/src/main/res/layout/movie_grid_item.xml
@@ -6,14 +6,14 @@
     android:layout_height="320dp"
     android:layout_gravity="center"
     android:clickable="true"
-    android:layout_margin="1dp">
+    android:layout_margin="1dp"
+    android:foreground="?attr/selectableItemBackground">
 
     <ImageView
         android:id="@+id/movie_poster"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:contentDescription="@string/movie_poster" />
+        android:scaleType="centerCrop"/>
 
     <View
         android:id="@+id/title_background"
