--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="black_translucent_60">#99000000</color>
+
+    <color name="window_background">#282828</color>
 </resources>
