--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
       tools:context=".listing.MoviesListingActivity">
     <item
         android:id="@+id/action_sort"
-        android:icon="@drawable/ic_favorite_white_24dp"
+        android:icon="@drawable/ic_sort"
         android:orderInCategory="100"
         android:title="@string/action_filter"
         app:showAsAction="always"/>
