--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,11 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="video_width">150dp</dimen>
     <dimen name="video_height">150dp</dimen>
+    <dimen name="layout_MarginBottom">4dp</dimen>
+    <dimen name="layout_marginRight">16dp</dimen>
+    <dimen name="layout_marginLeft">16dp</dimen>
+    <dimen name="layout_marginTop">16dp</dimen>
+    <dimen name="movienameTextSize">32sp</dimen>
+    <dimen name="layout_maginTopSummary">32dp</dimen>
+    <dimen name="layout_margin">16dp</dimen>
 </resources>
